Punctuation and Schedule time fix (#52)
* any overflow-x is now hidden

* re-added the accidently removed text in the about section

* Move modals outside of element so it does not get cut off by slant divider

* fixed slanted divider problem on wide screens

* nav bar reorder

* divider padding improved for mobile

* modals fixed so that they show up on top and mroe mobile friendly

* fadeinup animations re-added

* modal positioning centered for mobile friendly

* modal width maximum at 99vw for mobile friendly

* max-width of faq section set to 100vw

* prospectus updated

* prospectus:hover color fixed

* prospectus:focus color fixed

* prospectus:active color fixed

* prospectus-btn btn-info class removed for color correction on active

* white margin on right fixed by fixing prospectus-btn

* wow fadeInUp added to second container in the supporters section

* webkit prefix added to clip path for safari support

* improve padding for venue section

* punctuation and 12pm for lunch, not 12am

* improve participation faq

--- a/css/style.css
+++ b/css/style.css
@@ -1003,6 +1003,7 @@ body.mobile-nav-active #mobile-nav-toggle {
   position: relative;
   overflow: hidden;
   margin-bottom: 30px;
+  border-radius: 0;
 }
 
 @media screen and (prefers-reduced-motion: reduce) {
